# GraphicEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  OpenGLRendererConfig.h.in  OpenGLRendererConfig.hpp.in  README.md  buildEngine.bat  buildEngine.sh
.github/workflows/: CodeCoverage.yml  Linux.yml  Windows.yml  cmake.yml
Documents/: Doxyfile.in  static_code_analyzer.ruleset
Documents/googletest/: test_detail.xml
Documents/packaging/: WelcomeFile.txt
ExternalLib/: CMakeLists.txt
ExternalLib/GLAD/include/glad/: glad.h
ExternalLib/GLAD/src/: glad.c
ExternalLib/GLEW/glew-2.1.0/: glew.pc
Models/: dinosaurs.mtl  dragon_with_plane_ao.mtl  fsquad.mtl  rnl_cross_00ll.hdr
Models/Rocket/: Rocket.mtl
Models/generator/: generator_bump.tga  generator_diffuse.tga
Models/natureModels/: Bush1.3.mtl  Stone1.1.mtl  Stone1.3.mtl  Stone2.2.mtl  Stone3.2.mtl  Tree1.1.mtl  Tree3.2.mtl  Tree3.3.mtl
Models/sd85_cargo_starship/: sd85_cargo_starship_flying.mtl  sd85_cargo_starship_landed.mtl
Resources/Debug/: GraphicEngine.cppcheck  GraphicEngine2.cppcheck
Resources/Models/: donuts.mtl  sphere.mtl  statue.mtl
Resources/Shaders/: Clouds.frag  Clouds.vert  SkyBox.vert  directional_shadow_map.vert  g_buffer_geometry_pass.frag  g_buffer_geometry_pass.vert  g_buffer_lighting_pass.frag  loading_screen.frag  noise_texture_1.comp  noise_texture_2.comp  omni_shadow_map.vert  phong.frag  phong.vert
Shaders/: Clouds.frag  g_buffer_geometry_pass.frag  g_buffer_lighting_pass.frag  g_buffer_lighting_pass.vert  loading_screen.frag  noise_texture_1.comp  noise_texture_2.comp  omni_shadow_map.frag
Src/: AABB.cpp  App.cpp  Camera.cpp  CascadedShadowMap.h  ClampToEdgeMode.h  Clouds.cpp  Clouds.h  DirectionalLight.cpp  DirectionalLight.h  DirectionalLightUniformLocations.h  DirectionalShadowMapPass.cpp  DirectionalShadowMapPass.h  File.h  GameObject.cpp  GameObject.h  GeometryPass.cpp  GeometryPass.h  GeometryPassShaderProgram.cpp  GlobalValues.h  GraphicsEngine.cpp  Light.h  LightingPass.cpp  LightingPass.h  LightingPassShaderProgram.cpp  LightingPassShaderProgram.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MyWindow.cpp  MyWindow.h  Noise.cpp  Noise.h  OmniDirShadowMap.cpp  OmniDirShadowShaderProgram.h  OmniShadowMapPass.cpp  OmniShadowMapPass.h  Perlin.h  PlanetExploration.cpp  (+37 more)
Src/app/: App.cpp
Src/camera/: Camera.cpp  Camera.h
Src/compute/: ComputeShaderProgram.cpp  ComputeShaderProgram.h  ComputeShaderProgram.hpp
Src/debug/: DebugApp.cpp  DebugApp.h  DebugApp.hpp  glErrorChecker.h
Src/gui/: GUI.cpp  GUI.h  GUI.hpp
Src/html/: _a_a_b_b_8h_source.html  _camera_8h_source.html  _cascaded_shadow_map_8h_source.html  _clamp_to_edge_mode_8h_source.html  _clouds_8h_source.html  _clouds_shader_program_8h_source.html  _compute_shader_program_8h_source.html  _directional_light_8h_source.html  _directional_light_uniform_locations_8h_source.html  _directional_shadow_map_pass_8h_source.html  _g_buffer_8h_source.html  _game_object_8h_source.html  _geometry_pass_8h_source.html  _geometry_pass_shader_program_8h_source.html  _global_values_8h_source.html  _light_8h_source.html  _lighting_pass_8h_source.html  _lighting_pass_shader_program_8h_source.html  _loading_screen_shader_program_8h_source.html  _material_8h_source.html  _mesh_8h_source.html  _mirrored_repeat_mode_8h_source.html  _model_8h_source.html  _my_window_8h_source.html  _noise_8h_source.html  _omni_dir_shadow_map_8h_source.html  _omni_dir_shadow_shader_program_8h_source.html  _omni_shadow_map_pass_8h_source.html  _perlin_8h_source.html  _point_light_8h_source.html  _quad_8h_source.html  _render_pass_scene_dependend_8h_source.html  _repeat_mode_8h_source.html  _scene_8h_source.html  _shader_program_8h_source.html  _shadow_map_8h_source.html  _shadow_map_shader_program_8h_source.html  _sky_box_8h_source.html  _sky_box_shader_program_8h_source.html  _terrain___model_8h_source.html  (+111 more)
Src/renderer/: DirectionalShadowMapPass.cpp  DirectionalShadowMapPass.h  GBuffer.cpp  GBuffer.h  GeometryPass.cpp  GeometryPass.h  GeometryPassShaderProgram.cpp  GeometryPassShaderProgram.h  LightingPass.cpp  LightingPass.h  LightingPassShaderProgram.cpp  LightingPassShaderProgram.h  OpenGLRendererConfig.h  OpenGLRendererConfig.hpp  RenderPassSceneDependend.cpp  RenderPassSceneDependend.h  RenderPassSceneDependend.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  ShaderIncludes.cpp  ShaderIncludes.h  ShaderIncludes.hpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.hpp
Src/scene/: AABB.cpp  AABB.h  AABB.hpp  Camera.h  GameObject.cpp  GameObject.h  GameObject.hpp  Material.cpp  Mesh.cpp  Mesh.h  Mesh.hpp  Model.cpp  Model.h  Model.hpp  ObjLoader.cpp  ObjLoader.h  ObjLoader.hpp  ObjMaterial.cpp  ObjMaterial.h  (+14 more)
Test/: openGLRendererTester.cpp
Test/commit/: CMakeLists.txt  commitSuite.cpp
Test/commit/cmake/: CodeCoverage.cmake  SetTestFilters.cmake
Test/compile/: CMakeLists.txt  compileSuite.cpp
Test/compile/cmake/: SetTestFilters.cmake
cmake/: CPackOptions.cmake  CompilerWarnings.cmake  CreateExternalLibs.cmake  CreateProjectFilesToTestLib.cmake  Doxygen.cmake  Optimizations.cmake  Sanitizers.cmake  SetFilters.cmake  SetSourceGroups.cmake  Speedup.cmake  StaticAnalyzers.cmake
docs/: Doxyfile.in
src/: AABB.cpp  AABB.h  Camera.h  CascadedShadowMap.cpp  CascadedShadowMap.h  ClampToEdgeMode.cpp  ClampToEdgeMode.h  Clouds.cpp  CloudsShaderProgram.cpp  ComputeShaderProgram.cpp  DirectionalLight.cpp  DirectionalShadowMapPass.h  GBuffer.h  GameObject.h  GeometryPass.cpp  GeometryPass.h  GeometryPassShaderProgram.cpp  GeometryPassShaderProgram.h  Light.cpp  Light.h  LightingPass.cpp  LightingPassShaderProgram.cpp  LoadingScreenShaderProgram.cpp  LoadingScreenShaderProgram.h  Mesh.cpp  Mesh.h  MirroredRepeatMode.cpp  MirroredRepeatMode.h  Model.h  MyWindow.cpp  MyWindow.h  Noise.cpp  Noise.h  OmniDirShadowMap.h  OmniDirShadowShaderProgram.cpp  OmniShadowMapPass.cpp  OmniShadowMapPass.h  PlanetExploration.cpp  RenderPassSceneDependend.cpp  RenderPassSceneDependend.h  (+20 more)
(+2518 files in other folders)
